--- a/new_dev.html
+++ b/new_dev.html
@@ -3,6 +3,21 @@
 Hello!!!!!
 
 
-added #commit 2 
+added #commit 2
 
-see pull request working
+## commit 3
+
+for test the multiple PRs and commit ids working 
+
+
+#3 commit 6
+
+to test multiple PRSD
+
+
+#new commit 9
+
+added new lines
+
+
+# commit 10
