--- a/new_dev.html
+++ b/new_dev.html
@@ -23,6 +23,8 @@ added new lines
 # commit 10
 
 
-## changes to see if conflict occurs or not
+## remove previous line to see any conflict occurs
 
 ####commit from demo to main
+
+
